# alphafold_serverless

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  af2_serverless.yaml  cloudflare_io.py  env.sample  handler.py  io_utilis.py  launch.py  prediction.py  pyproject.toml  start.sh  test.py
.github/workflows/: publish.yml
src/: cloudflare_io.py  handler.py  io_utils.py  launch.py  prediction.py
